在1.21.1保留对低版本sodium的支持，合并了低版本Sodium中的菜单页